--- a/sparks/package.json
+++ b/sparks/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "mongoose": "^5.10.13",
+    "nodemailer": "^6.4.16",
     "nodemon": "^2.0.6",
     "sweetalert": "^2.1.2"
   }
